--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,36 @@
       top:  2.5vh;
       right: 5vw;
       left: 50vw;
-      color: #fff
+      color: #fff;
+      font-family: "Trebuchet MS", Helvetica, sans-serif
     }
     .links{
       color: #fff;
       text-decoration: none
     }
+    .links2{
+      text-decoration: none;
+      color: #7c7c7c
+    }
+    .intro{
+      font-size: 110%;
+      letter-spacing: 2px;
+    }
+    .btmDownload{
+      background-color: #fff;
+      width: 10vw;
+      border-radius: 50px;
+      color: #7c7c7c;
+      text-align: center;
+      padding: 15px 0;
+    }
+  .App-intro{
+    position: absolute;
+    top: 15vh;
+    right: 10vw;
+    left: 5vw;
+    font-family: "Trebuchet MS", Helvetica, sans-serif
+  }
   .head-logo{
     width: 8.9vw;
     margin-left: 19.1vw;
@@ -29,14 +53,23 @@
     width: 100vw;
     height: 70vh;
     background-color: #fff;
+    font-family: "Trebuchet MS", Helvetica, sans-serif
   }
 
+  .Why-desc{
+    width: 20vw;
+    color: #4a4a4a;
+    position: absolute;
+    right: 25vw;
+    top:90vh;
+  }
   .App-download {
     width: 100vw;
     background-color: #dfdfdf;
     text-align: center;
-    padding: 70px 0;
+    padding: 50px 0;
     color: #4a4a4a;
+    font-family: "Trebuchet MS", Helvetica, sans-serif
   }
 
   .App-about {
@@ -45,18 +78,26 @@
     background-color: #fff;
     text-align: center;
     color: #4a4a4a;
+    font-family: "Trebuchet MS", Helvetica, sans-serif
   }
-
+  .descrip{
+    text-align: justify;
+    margin-left: 30vw;
+    margin-right: 30vw;
+  }
   .App-team {
     width: 100vw;
     height: 50vh;
     background-color: #f6f6f6;
+    font-family: "Trebuchet MS", Helvetica, sans-serif
   }
 
   .App-foot{
     width: 100%;
     height: 10%;
     background-color: #000;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    color: #fff;
   }
 
   .foot-logo{
@@ -74,6 +115,14 @@
     width: 17vw;
     height: 67vh;
     margin-left: 19.1%;
+  }
+  .rights{
+    color: #7c7c7c;
+    font-size: 80%;
+    position: absolute;
+    bottom: -138.5vh;
+    right: 20vw;
+    background-color: #000
   }
 
   @keyframes App-logo-spin {
